# ppx_jsonaf_conv

./: README.md  README.org  ppx_jsonaf_conv.opam
expander/: attrs.ml  attrs.mli  diff-vs-ppx_yojson_conv.diff  dune  label_with_name.ml  ppx_jsonaf_conv_expander.ml  ppx_jsonaf_conv_expander.mli
runtime-lib/: dune  jsonaf_conv_error.ml  jsonaf_conv_error.mli  ppx_jsonaf_conv_lib.ml  ppx_jsonaf_conv_lib.mli
src/: dune  ppx_jsonaf_conv.ml  ppx_jsonaf_conv.mli
test/: dune  errors.mlt  examples.mlt  nonrec_test.ml  ppx_jsonaf_conv_test.ml  ppx_jsonaf_test.ml
