opam-version: "2.0"
version: "v0.15.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_jsonaf_conv"
bug-reports: "https://github.com/janestreet/ppx_jsonaf_conv/issues"
dev-repo: "git+https://github.com/janestreet/ppx_jsonaf_conv.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_jsonaf_conv/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml"    {>= "4.08.0"}
  "base"     {>= "v0.15" & < "v0.16"}
  "jsonaf"   {>= "v0.15" & < "v0.16"}
  "ppx_jane" {>= "v0.15" & < "v0.16"}
  "dune"     {>= "2.0.0"}
  "ppxlib"   {>= "0.23.0"}
]
synopsis: "[@@deriving] plugin to generate Jsonaf conversion functions"
description: "
Part of the Jane Street's PPX rewriters collection.
"
