opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_jsonaf_conv"
bug-reports: "https://github.com/janestreet/ppx_jsonaf_conv/issues"
dev-repo: "git+https://github.com/janestreet/ppx_jsonaf_conv.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_jsonaf_conv/index.html"
license: "MIT"
x-maintenance-intent: ["(latest)"]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "base"
  "basement"
  "capitalization"
  "jsonaf"
  "ppx_jane"
  "ppx_template"
  "ppxlib_jane"
  "dune"           {>= "3.17.0"}
  "ppxlib"         {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "[@@deriving] plugin to generate Jsonaf conversion functions"
description: "
Part of the Jane Street's PPX rewriters collection.
"
